--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
     "moment": "^2.18.1",
+    "ngx-cookie": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
