update meta data with name change

--- a/src/assets/favicon/manifest.json
+++ b/src/assets/favicon/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "WYST Boat Maintenance",
+  "name": "Wellington Youth Sailing Trust",
   "icons": [
     {
       "src": "/android-icon-36x36.png",
