--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.3.1",
-    "@angular/compiler-cli": "^4.3.6",
     "@angular/animations": "^4.2.5",
     "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
-    "@angular/flex-layout": "^2.0.0-rc.1",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.8",
@@ -35,6 +33,8 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@angular/cli": "^1.3.1",
+    "@angular/compiler-cli": "^4.3.6",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
