--- a/src/assets/favicon/manifest.json
+++ b/src/assets/favicon/manifest.json
@@ -36,8 +36,17 @@
       "sizes": "192x192",
       "type": "image\/png",
       "density": "4.0"
+    },
+    {
+      "src": "\/U23-Reports/assets/favicon/android-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image\/png",
+      "density": "5.0"
     }
   ],
-  "start_url": "/U23-Reports/index.html",
+  "start_url": "/U23-Reports/?homescreen=1",
+  "scope": "/U23-Reports/",
+  "background_color": "#424242",
+  "theme_color": "#03a9f4",
   "display": "standalone"
 }
