--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angularfire2": "^4.0.0-rc0",
+    "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
     "moment": "^2.18.1",
+    "ng2-charts": "^1.6.0",
     "ngx-cookie": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
