--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.5",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
     "@angular/flex-layout": "2.0.0-beta.9",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "angularfire2": "^4.0.0-rc0",
-    "chart.js": "^2.6.0",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
+    "angularfire2": "^5.0.0-rc.3",
+    "chart.js": "^2.7.0",
     "core-js": "^2.4.1",
-    "firebase": "^4.1.3",
-    "moment": "^2.18.1",
+    "firebase": "^4.6.0",
+    "moment": "^2.19.1",
     "ng2-charts": "^1.6.0",
     "ngx-cookie": "^1.0.0",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.1",
-    "@angular/compiler-cli": "^4.3.6",
-    "@angular/language-service": "^4.0.0",
+    "@angular/cli": "^1.4.9",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/language-service": "^4.4.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.90",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -55,6 +55,7 @@
     "sw-precache": "^5.2.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "webpack": "^3.8.1"
   }
 }
