--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
+    "@angular/animations": "^5.0.1",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/flex-layout": "2.0.0-beta.9",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
+    "@angular/common": "^5.0.1",
+    "@angular/compiler": "^5.0.1",
+    "@angular/core": "^5.0.1",
+    "@angular/flex-layout": "^2.0.0-beta.10",
+    "@angular/forms": "^5.0.1",
+    "@angular/http": "^5.0.1",
     "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/platform-browser": "^5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@angular/platform-server": "^5.0.1",
+    "@angular/router": "^5.0.1",
     "angularfire2": "^5.0.0-rc.3",
-    "chart.js": "^2.7.0",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
-    "firebase": "^4.6.0",
+    "firebase": "^4.6.2",
     "moment": "^2.19.1",
     "ng2-charts": "^1.6.0",
-    "ngx-cookie": "^1.0.0",
+    "ngx-cookie": "^1.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.9",
-    "@angular/compiler-cli": "^4.4.6",
+    "@angular/cli": "^1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^4.4.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -55,7 +56,7 @@
     "sw-precache": "^5.2.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
+    "typescript": "2.4.2",
     "webpack": "^3.8.1"
   }
 }
