--- a/src/assets/favicon/manifest.json
+++ b/src/assets/favicon/manifest.json
@@ -2,50 +2,50 @@
   "short_name":"WYST",
   "name": "Wellington Youth Sailing Trust",
   "icons": [{
-      "src": "\/U23-Reports/assets/favicon/android-icon-36x36.png",
+      "src": "assets/favicon/android-icon-36x36.png",
       "sizes": "36x36",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "0.75"
     },
     {
-      "src": "\/U23-Reports/assets/favicon/android-icon-48x48.png",
+      "src": "assets/favicon/android-icon-48x48.png",
       "sizes": "48x48",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "1.0"
     },
     {
-      "src": "\/U23-Reports/assets/favicon/android-icon-72x72.png",
+      "src": "assets/favicon/android-icon-72x72.png",
       "sizes": "72x72",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "1.5"
     },
     {
-      "src": "\/U23-Reports/assets/favicon/android-icon-96x96.png",
+      "src": "assets/favicon/android-icon-96x96.png",
       "sizes": "96x96",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "2.0"
     },
     {
-      "src": "\/U23-Reports/assets/favicon/android-icon-144x144.png",
+      "src": "assets/favicon/android-icon-144x144.png",
       "sizes": "144x144",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "3.0"
     },
     {
-      "src": "\/U23-Reports/assets/favicon/android-icon-192x192.png",
+      "src": "assets/favicon/android-icon-192x192.png",
       "sizes": "192x192",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "4.0"
     },
     {
-      "src": "\/U23-Reports/assets/favicon/android-icon-512x512.png",
+      "src": "assets/favicon/android-icon-512x512.png",
       "sizes": "512x512",
-      "type": "image\/png",
+      "type": "image/png",
       "density": "5.0"
     }
   ],
-  "start_url": "/U23-Reports/?homescreen=1",
-  "scope": "/U23-Reports/",
+  "start_url": "/?utm_source=homescreen",
+  "scope": "",
   "background_color": "#424242",
   "theme_color": "#03a9f4",
   "display": "standalone"
