--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.1",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^5.0.1",
-    "@angular/compiler": "^5.0.1",
-    "@angular/core": "^5.0.1",
-    "@angular/flex-layout": "^2.0.0-beta.10",
-    "@angular/forms": "^5.0.1",
-    "@angular/http": "^5.0.1",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^5.0.1",
-    "@angular/platform-browser-dynamic": "^5.0.1",
-    "@angular/platform-server": "^5.0.1",
-    "@angular/router": "^5.0.1",
-    "angularfire2": "^5.0.0-rc.3",
+    "@angular/animations": "^5.0.3",
+    "@angular/cdk": "github:angular/cdk-builds",
+    "@angular/common": "^5.0.3",
+    "@angular/compiler": "^5.0.3",
+    "@angular/core": "^5.0.3",
+    "@angular/flex-layout": "^2.0.0-beta.10-4905443",
+    "@angular/forms": "^5.0.3",
+    "@angular/http": "^5.0.3",
+    "@angular/material": "github:angular/material2-builds",
+    "@angular/platform-browser": "^5.0.3",
+    "@angular/platform-browser-dynamic": "^5.0.3",
+    "@angular/platform-server": "^5.0.3",
+    "@angular/router": "^5.0.3",
+    "angularfire2": "^5.0.0-rc.4",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "firebase": "^4.6.2",
-    "moment": "^2.19.1",
+    "moment": "^2.19.2",
     "ng2-charts": "^1.6.0",
     "ngx-cookie": "^1.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/cli": "^1.5.4",
+    "@angular/compiler-cli": "^5.0.3",
     "@angular/language-service": "^4.4.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.90",
+    "@types/node": "^6.0.92",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
