--- a/src/assets/favicon/manifest.json
+++ b/src/assets/favicon/manifest.json
@@ -1,11 +1,18 @@
 {
   "short_name": "WYST",
   "name": "Wellington Youth Sailing Trust",
-  "icons": [{
-    "src": "assets/favicon/android-chrome-48x48.png",
-    "sizes": "48x48",
-    "type": "image/png"
-  }],
+  "icons": [
+      {
+          "src": "assets/favicon/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "assets/favicon/android-chrome-256x256.png",
+          "sizes": "256x256",
+          "type": "image/png"
+      }
+  ],
   "start_url": "/?utm_source=homescreen",
   "scope": "/",
   "background_color": "#424242",
