--- a/src/assets/favicon/manifest.json
+++ b/src/assets/favicon/manifest.json
@@ -11,7 +11,13 @@
           "src": "assets/favicon/android-chrome-256x256.png",
           "sizes": "256x256",
           "type": "image/png"
+      },
+      {
+          "src": "assets/favicon/android-icon-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
       }
+
   ],
   "start_url": "/?utm_source=homescreen",
   "scope": "/",
