--- a/src/assets/favicon/manifest.json
+++ b/src/assets/favicon/manifest.json
@@ -3,17 +3,17 @@
   "name": "Wellington Youth Sailing Trust",
   "icons": [
       {
-          "src": "assets/favicon/android-chrome-192x192.png",
+          "src": "\/assets/favicon/android-chrome-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
       },
       {
-          "src": "assets/favicon/android-chrome-256x256.png",
+          "src": "\/assets/favicon/android-chrome-256x256.png",
           "sizes": "256x256",
           "type": "image/png"
       },
       {
-          "src": "assets/favicon/android-icon-512x512.png",
+          "src": "\/assets/favicon/android-icon-512x512.png",
           "sizes": "512x512",
           "type": "image/png"
       }
