--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
-    "@angular/flex-layout": "git+https://github.com/angular/flex-layout-builds.git",
+    "@angular/flex-layout": "^2.0.0-beta.12",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/material": "^5.0.2",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@cloudinary/angular-5.x": "^1.0.0",
     "angularfire2": "^5.0.0-rc.4",
     "chart.js": "^2.7.1",
+    "cloudinary-core": "^2.4.0",
     "core-js": "^2.4.1",
     "firebase": "^4.8.0",
     "ng2-charts": "^1.6.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-cookie": "^2.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
