--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ branches:
       - master
 
 before_script:
+   - npm install -g firebase-tools
    - npm install -g @angular/cli
 
 script:
-   - ng build --prod
+   - ng build --prod --aot
+
+after_success:
+   - firebase deploy --token $FIREBASE_TOKEN
