--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chart.js": "^2.7.1",
     "cloudinary-core": "^2.4.0",
     "core-js": "^2.4.1",
-    "firebase": "^4.8.0",
+    "firebase": "4.8.0",
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-cookie": "^2.0.1",
@@ -56,7 +56,7 @@
     "protractor": "~5.2.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.6.2",
+    "typescript": "2.5.3",
     "webpack": "^3.10.0"
   }
 }
