--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "wyst",
-  "version": "1.5.2",
-  "license": "MIT",
+  "name": "demo",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,52 +11,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.2",
-    "@angular/cdk": "^5.1.1",
-    "@angular/common": "^5.2.7",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.2.7",
-    "@angular/flex-layout": "^5.0.0-beta.13",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.1.1",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@angular/service-worker": "^5.1.2",
-    "@cloudinary/angular-5.x": "^1.0.0",
-    "angularfire2": "^5.0.0-rc.4",
+    "@angular/animations": "^6.0.6",
+    "@angular/cdk": "^6.3.0",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/flex-layout": "^6.0.0-beta.16",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/material": "^6.3.0",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@angular/service-worker": "^6.0.6",
+    "@cloudinary/angular-5.x": "^1.0.1",
+    "angularfire2": "^5.0.0-rc.11",
     "chart.js": "^2.7.2",
-    "cloudinary-core": "^2.4.0",
-    "core-js": "^2.4.1",
-    "firebase": "4.13.1",
+    "classlist.js": "^1.1.20150312",
+    "cloudinary-core": "^2.5.0",
+    "core-js": "^2.5.4",
+    "firebase": "^5.1.0",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
-    "ngx-cookie": "^3.0.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "ngx-cookie": "^4.0.2",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
+    "web-animations-js": "^2.3.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~9.6.6",
-    "codelyzer": "~4.1.0",
-    "jasmine-core": "~3.1.0",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-angular": "~0.6.6",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.7",
+    "@angular/language-service": "^6.0.3",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
-    "ts-node": "~6.0.2",
-    "tslint": "~5.9.1",
-    "typescript": "2.5.3",
-    "webpack": "^3.10.0"
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1"
   }
 }
