Use NPYC logo asset #6

--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,7 +1,7 @@
 {
   "index": "/index.html",
   "assetGroups": [{
-    "name": "WYST",
+    "name": "NPYC",
     "installMode": "prefetch",
     "resources": {
       "files": [
