--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
 deploy:
    provider: firebase
    token: $FIREBASE_TOKEN
+   project: NPYC-UsageMaintenanceTracker
    skip_cleanup: true
    on:
       branch: master
