--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/material": "^6.3.0",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.3",
-    "@angular/service-worker": "^6.0.6",
+    "@angular/service-worker": "^6.0.3",
     "@cloudinary/angular-5.x": "^1.0.1",
     "angularfire2": "^5.0.0-rc.11",
     "chart.js": "^2.7.2",
