--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
    - '8'
-
+cache:
+  directories:
+  - node_modules
 branches:
    only:
       - master
@@ -10,6 +12,7 @@ branches:
 before_script:
    - npm install -g firebase-tools
    - npm install -g @angular/cli
+   - npm install -g tslint
 
 script:
    - ng build --prod --aot
@@ -21,3 +24,8 @@ deploy:
    skip_cleanup: true
    on:
       branch: master
+
+notifications:
+  email:
+    on_failure: change
+    on_success: change
