--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,25 @@
 language: node_js
 node_js:
-   - '8'
+  - '8'
 cache:
   directories:
-  - node_modules
+    - node_modules
 branches:
    only:
-      - master
-      - /^greenkeeper/.*$/
+     - master
+     - /^greenkeeper/.*$/
 
 before_script:
-   - npm install -g firebase-tools
-   - npm install -g @angular/cli
-   - npm install -g tslint
+  - npm install -g firebase-tools
+  - npm install -g @angular/cli
+
 
 script:
-   - ng build --prod --aot
+  - ng build --prod --aot
 
+before_deploy:
+  - cd functions; npm install
+  - cd ../
 deploy:
    provider: firebase
    token: $FIREBASE_TOKEN
