--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/theme.scss"
+              "src/theme.scss",
+              "node_modules/firebaseui/dist/firebaseui.css"
             ],
             "scripts": []
           },
@@ -76,7 +77,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.css",
-              "src/theme.scss"
+              "src/theme.scss",
+              "node_modules/firebaseui/dist/firebaseui.css"
             ],
             "scripts": [],
             "assets": [
