--- a/package.json
+++ b/package.json
@@ -11,42 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.6",
-    "@angular/cdk": "^6.3.0",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/material": "^6.3.0",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/pwa": "^0.6.8",
-    "@angular/router": "^6.0.3",
-    "@angular/service-worker": "^6.0.3",
-    "@cloudinary/angular-5.x": "^1.0.1",
-    "angularfire2": "^5.0.0-rc.11",
+    "@angular/animations": "^6.1.7",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.7",
+    "@angular/compiler": "^6.1.7",
+    "@angular/core": "^6.1.7",
+    "@angular/flex-layout": "^6.0.0-beta.18",
+    "@angular/forms": "^6.1.7",
+    "@angular/http": "^6.1.7",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.7",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/router": "^6.1.7",
+    "@angular/service-worker": "^6.1.7",
+    "@cloudinary/angular-5.x": "^1.0.2",
+    "angularfire2": "^5.0.1",
     "chart.js": "^2.7.2",
     "classlist.js": "^1.1.20150312",
     "cloudinary-core": "^2.5.0",
     "core-js": "^2.5.4",
-    "firebase": "^5.1.0",
+    "firebase": "^5.5.0",
+    "firebaseui": "^3.4.1",
+    "firebaseui-angular": "^3.3.2",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-cookie": "^4.0.2",
-    "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.2.1",
+    "rxjs": "^6.3.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.6",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.7",
-    "@angular/language-service": "^6.0.3",
+    "@angular/cli": "~6.2.2",
+    "@angular/compiler-cli": "^6.1.7",
+    "@angular/language-service": "^6.1.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -55,11 +54,13 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "rxjs-compat": "^6.3.2",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "^2.9.2"
   }
 }
