Transfer to TRIYA use. - Link to triya firebase - Change names from NPYC to TRIYA - Link to TRIYA travic-ci *(travis not yet setup)

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "npyc-usagemaintenancetracker",
-    "dev": "npyc-dev"
+    "default": "triya-usagemaintenancetracker",
+    "dev": "triya-dev"
   }
 }
