--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "NPYC Usage and Maintenace Tracker",
-  "short_name": "NPYC Boats",
+  "name": "TRIYA Usage and Maintenace Tracker",
+  "short_name": "TRIYA Boats",
   "theme_color": "#AFB42B",
   "background_color": "#AFB42B",
   "display": "standalone",
