--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cloudinary-core": "^2.6.1",
     "core-js": "^2.6.3",
     "firebase": "^5.8.1",
+    "firebase-tools": "^6.3.1",
     "firebaseui": "^3.5.2",
     "firebaseui-angular": "^3.4.1",
     "hammerjs": "^2.0.8",
