--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "TRIYA Usage and Maintenace Tracker",
-  "short_name": "TRIYA Boats",
+  "name": "mcsc Usage and Maintenace Tracker",
+  "short_name": "mcsc Boats",
   "theme_color": "#d32f2f",
   "background_color": "#d32f2f",
   "display": "standalone",
