--- a/package.json
+++ b/package.json
@@ -12,59 +12,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/fire": "^5.1.3",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.2.15",
-    "@angular/http": "^7.2.15",
-    "@angular/material": "^7.3.7",
-    "@angular/material-moment-adapter": "^7.3.7",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
-    "@angular/service-worker": "^7.2.15",
-    "@cloudinary/angular-5.x": "^1.0.2",
-    "chart.js": "^2.7.3",
+    "@angular/animations": "^8.2.12",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.12",
+    "@angular/compiler": "^8.2.12",
+    "@angular/core": "^8.2.12",
+    "@angular/fire": "^5.2.1",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "^8.2.12",
+    "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
+    "@angular/platform-browser": "^8.2.12",
+    "@angular/platform-browser-dynamic": "^8.2.12",
+    "@angular/router": "^8.2.12",
+    "@angular/service-worker": "^8.2.12",
+    "@cloudinary/angular-5.x": "^1.0.3",
+    "chart.js": "^2.9.1",
     "classlist.js": "^1.1.20150312",
-    "cloudinary-core": "^2.5.0",
-    "core-js": "^2.5.4",
-    "firebase": "^6.0.2",
-    "firebaseui": "^3.6.1",
-    "firebaseui-angular": "^3.4.1",
+    "cloudinary-core": "^2.7.4",
+    "core-js": "^3.3.4",
+    "firebase": "^7.2.2",
+    "firebaseui": "^4.2.0",
+    "firebaseui-angular": "^4.0.0",
     "hammerjs": "^2.0.8",
-    "ng2-charts": "^1.6.0",
-    "ng2-file-upload": "^1.3.0",
-    "ngx-cookie": "4.0.0",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.29"
+    "ng2-charts": "^2.3.0",
+    "ng2-file-upload": "^1.4.0",
+    "ngx-cookie-service": "^2.2.0",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.2.3",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.2",
-    "@types/jasmine": "^2.8.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.19",
-    "codelyzer": "~4.5.0",
+    "@angular-devkit/build-angular": "~0.803.14",
+    "@angular/cli": "^8.3.14",
+    "@angular/compiler-cli": "^8.2.12",
+    "@angular/language-service": "^8.2.12",
+    "@types/jasmine": "^3.4.4",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.11.7",
+    "codelyzer": "^5.0.1",
     "har-validator": "^5.1.3",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "replace-in-file": "^4.0.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "^3.2.4"
+    "replace-in-file": "^4.2.0",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "~3.4.0"
   }
 }
