--- a/functions/package.json
+++ b/functions/package.json
@@ -9,14 +9,18 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "8"
+  },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "firebase-functions-test": "^0.1.6"
   },
   "private": true
 }
